--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/XavierZhang/ScaleImage#readme",
   "dependencies": {
+    "lodash": "^4.7.0",
     "q": "^1.4.1",
     "tinify": "^1.3.0"
   }
